--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "pos-based-fluids"
 version = "0.1.0"
 edition = "2021"
 
+
 [dependencies]
 winit = { version = "0.29.4" , features = ["rwh_05"]}
 wgpu = "0.18"
@@ -10,3 +11,7 @@ env_logger = "0.10"
 log = "0.4"
 pollster = "0.3"
 bytemuck = { version = "1.12", features = [ "derive" ] }
+cgmath = "0.18.0"
+anyhow = "1.0.75"
+image = { version = "0.24.7", features = [] }
+glam = "0.24.2"
